<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
             schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>task4c_3578</name>
  <version>0.0.0</version>
  <description>Perception and manipulation for Task 4C</description>

  <maintainer email="ashish@todo.todo">ashish</maintainer>
  <license>Apache-2.0</license>

  <!-- ================= BUILD TOOLS ================= -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ================= CORE ROS 2 ================= -->
  <depend>rclpy</depend>

  <!-- ================= ROS MESSAGES ================= -->
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>control_msgs</depend>
  <depend>std_srvs</depend>

  <!-- ================= TF ================= -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- ================= OPENCV ================= -->
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <!-- ================= PYTHON RUNTIME ================= -->
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

  <!-- ================= TESTING ================= -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- ================= EXPORT ================= -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
